# Server/Classes/Category.js
@@ -1,0 +1,7 @@
+class Category {
+    constructor(Categoria) {
+        this.categoria = Categoria;
+    }
+}
+
+module.exports = Category;
