# Server/Classes/SubCategory.js
@@ -1,0 +1,8 @@
+class SubCategory {
+    constructor(SubCategoria, Categoria) {
+        this.subcategoria = SubCategoria;
+        this.categoria = Categoria
+    }
+}
+
+module.exports = SubCategory;
